# pico-intruder-detection

./: .gitignore  CMakeLists.txt  README.md  detector.cpp
